<resources>
    <string name="app_name">RT</string>
    <string name="dialog_info_title">Microphone required</string>
    <string name="dialog_info_description">This app records audio only for measuring the Reverb Time. It\'s open source:\n\nhttps://github.com/soygabimoreno/RT</string>
    <string name="dialog_info_btn_text">Request again</string>
    <string name="dialog_app_settings_title">Grant permissions</string>
    <string name="dialog_app_settings_description">Please, add manually the required permissions.\n\nThey are required to use the app.</string>
    <string name="dialog_app_settings_btn_text">OK</string>
    <string name="dialog_help_title">Instructions</string>
    <string name="dialog_help_description">App for measuring Reverb Time in octaves or average in a really easy way.\n\nSteps:\n1. Press START\n2. Clap your hands after the countdown (measuring step)\n3. See results\n\nWatch video: https://www.youtube.com/watch?v=CnWFxmBcNlk\n\nTo achieve optimum results, it is highly recommended to try to locate the device away from reflective surfaces and clap stick farther from the critical radius, so that the sound reverberated outweighs the direct one.</string>
    <string name="dialog_help_btn_text">OK</string>

    <string name="menu_authentication">Authentication</string>
    <string name="menu_help">Help</string>
    <string name="menu_share">Share the app</string>
    <string name="menu_email">Send an email</string>
    <string name="menu_rate">Rate the app</string>
    <string name="menu_info">Info</string>

    <string name="share_title">Share the app</string>
    <string name="share_text">Check this app for measuring the Reverb Time. It is awesome! 🙂\nhttps://play.google.com/store/apps/details?id=com.appacoustic.rt</string>

    <string name="email_title">Select email</string>
    <string name="email_to">contact@appacoustic.com</string>
    <string name="email_subject">EMAIL FROM RT APP</string>
    <string name="email_text">Feel free to send feedback, asking or suggesting anything.\nWe really appreciate it! ☺️\n---\n</string>

    <string name="bottom_navigation_menu_measure">Measure</string>
    <string name="bottom_navigation_menu_signal">Signal</string>
    <string name="bottom_navigation_menu_player">Player</string>
    <string name="bottom_navigation_menu_settings">Settings</string>

    <string name="spinner_frequency_125">125 Hz</string>
    <string name="spinner_frequency_250">250 Hz</string>
    <string name="spinner_frequency_500">500 Hz</string>
    <string name="spinner_frequency_1000">1000 Hz</string>
    <string name="spinner_frequency_2000">2000 Hz</string>
    <string name="spinner_frequency_4000">4000 Hz</string>
    <string name="spinner_order_1">Order 1</string>
    <string name="spinner_order_2">Order 2</string>
    <string name="spinner_order_4">Order 4</string>
    <string name="spinner_order_8">Order 8</string>

    <string name="test_signal_white_noise_100_ms">White Noise (100 ms)</string>
    <string name="test_signal_white_noise_300_ms">White Noise (300 ms)</string>
    <string name="test_signal_pink_noise_100_ms">Pink Noise (100 ms)</string>
    <string name="test_signal_pink_noise_300_ms">Pink Noise (300 ms)</string>

    <string name="start">START</string>
    <string name="frequency_hz">Freq (Hz)</string>
    <string name="time_s">Time (s)</string>
    <string name="f_125">125</string>
    <string name="f_250">250</string>
    <string name="f_500">500</string>
    <string name="f_1000">1000</string>
    <string name="f_2000">2000</string>
    <string name="f_4000">4000</string>
    <string name="average_x_s">Average: %s</string>
    <string name="countdown_3">3</string>
    <string name="countdown_2">2</string>
    <string name="countdown_1">1</string>
    <string name="measuring">Measuring…</string>
    <string name="calculating">Calculating…</string>
    <string name="undefined">…</string>
    <string name="error_empty_signal">The signal is empty.\n Please try again</string>
    <string name="signal">Signal</string>
    <string name="filter_enabled">Filter enabled</string>
    <string name="filter_disabled">Filter disabled</string>
    <string name="using_dirac_test_signal">Using test signal (use external microphone)</string>
    <string name="not_using_dirac_test_signal">Not using test signal</string>
    <string name="take_a_measure_to_see_its_signal">Take a measure to see its signal</string>
    <string name="dirac_test_signals">Dirac Test Signals</string>
</resources>
