<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.main.MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Dirac Test Signals"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <com.appacoustic.rt.framework.customview.PlayTestSignalView
            android:id="@+id/ptsvWhiteNoise100ms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:custom_text="@string/test_signal_white_noise_100_ms"/>

        <com.appacoustic.rt.framework.customview.PlayTestSignalView
            android:id="@+id/ptsvWhiteNoise300ms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:custom_text="@string/test_signal_white_noise_300_ms"/>

        <com.appacoustic.rt.framework.customview.PlayTestSignalView
            android:id="@+id/ptsvPinkNoise100ms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:custom_text="@string/test_signal_pink_noise_100_ms"/>

        <com.appacoustic.rt.framework.customview.PlayTestSignalView
            android:id="@+id/ptsvPinkNoise300ms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:custom_text="@string/test_signal_pink_noise_300_ms"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
